Fix scroll top alignment.

--- a/src/shared/components/scroll-to-top/ScrollToTop.css
+++ b/src/shared/components/scroll-to-top/ScrollToTop.css
@@ -7,6 +7,7 @@
     text-align: center;
     line-height: 33px;
     pointer-events: auto;
+    cursor: pointer;
     transition: background 0.15s, opacity 0.2s linear;
 }
 
@@ -14,9 +15,11 @@
     opacity: 1;
 }
 
-.scroll-to-top-component,
 .scroll-to-top-component i {
-    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    line-height: inherit;
+    cursor: inherit;
 }
 
 .scroll-to-top-component:hover {
